# bbtq

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.md  DEVELOP.md  Makefile  Pipfile  README.md  pyproject.toml  setup.py  tq
.github/: dependabot.yml
.github/workflows/: test.yml
bbtq/: __init__.py  cli.py  core.py
bbtq/tests/: test_cli.py  test_core.py
btq/: __init__.py  core.py
btq/tests/: test.toml  test_btq.py  test_cli.py  test_core.py
test/: deep.toml  simple.toml  test_btq.py  test_cli.py  test_tq.py
