[tool.poetry]
name = "bbtq"
version = "3.0.1"
description = "Barebones TOML query."
authors = ["Andrew Erickson <aerickson@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/aerickson/bbtq"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aerickson/bbtq/issues"
"Changelog" = "https://github.com/aerickson/bbtq/blob/master/CHANGES.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"

[tool.poetry.scripts]
tq = "bbtq.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = ">=22.6,<24.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
